tests/compile_fail/arguments.rs
use auto_default::auto_default;

// arguments are not expected
#[auto_default(arguments)]
struct X {}

fn main() {}
